<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My board</string>
    <string name="title_add">new Reminder</string>
    <string name="reminder_name">What do you want to remember?</string>
    <string name="when">When do you want to do it?</string>
    <string name="what_time">At what time?</string>
    <string name="done">Done</string>
    <string name="s">Sunday</string>
    <string name="m">Monday</string>
    <string name="t">Tuesday</string>
    <string name="w">Wednesday</string>
    <string name="x">Thursday</string>
    <string name="f">Friday</string>
    <string name="a">Saturday</string>


</resources>